--- a/languages/objinspstrconsts.de.po
+++ b/languages/objinspstrconsts.de.po
@@ -113,13 +113,13 @@ msgstr "&Hoch"
 msgid "(All)"
 msgstr "(Alle)"
 
-#: objinspstrconsts:cactionlisteditorunknowncategory
-msgid "(Unknown)"
-msgstr "(Unbekannt)"
-
 #: objinspstrconsts:oisnone
 msgid "(none)"
 msgstr ""
+
+#: objinspstrconsts:cactionlisteditorunknowncategory
+msgid "(Unknown)"
+msgstr "(Unbekannt)"
 
 #: objinspstrconsts:ois0lines0chars
 msgid "0 lines, 0 chars"
@@ -236,6 +236,10 @@ msgstr "Editor für Checklistboxen"
 #: objinspstrconsts:oisclass
 msgid "Class"
 msgstr "Klasse"
+
+#: objinspstrconsts:sccssgedtclean
+msgid "Clean"
+msgstr ""
 
 #: objinspstrconsts:sccsiledtclear
 msgid "Clear"
@@ -357,17 +361,21 @@ msgstr "&Beenden"
 msgid "Edit"
 msgstr "Bearbeiten"
 
+#: objinspstrconsts:oiseditactionlist
+msgid "Edit action list..."
+msgstr "Aktionsliste bearbeiten"
+
 #: objinspstrconsts:sccslvedt
 msgid "Edit ListView Items..."
+msgstr ""
+
+#: objinspstrconsts:sccssgedt
+msgid "Edit StringGrid..."
 msgstr ""
 
 #: objinspstrconsts:sccstredt
 msgid "Edit TreeView Items..."
 msgstr ""
-
-#: objinspstrconsts:oiseditactionlist
-msgid "Edit action list..."
-msgstr "Aktionsliste bearbeiten"
 
 #: objinspstrconsts:oicoleditediting
 msgid "Editing"
@@ -429,14 +437,6 @@ msgstr "Hilfe"
 msgid "Help Contents"
 msgstr "Hilfeinhalt"
 
-#: objinspstrconsts:oishelphelpdatabasedidnotfoundaviewerforahelppageoftype
-msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
-msgstr "Hilfedatenbank %s%s%s konnte keinen Betrachter für die Hilfeseite des Typs %s finden"
-
-#: objinspstrconsts:oishelphelpdatabasenotfound
-msgid "Help Database %s%s%s not found"
-msgstr "Hilfedatenbank %s%s%s nicht gefunden"
-
 #: objinspstrconsts:oishelphelpcontextnotfoundindatabase
 msgid "Help context %s not found in Database %s%s%s."
 msgstr "Hilfekontext %s nicht in der Datenbank %s%s%s gefunden."
@@ -444,6 +444,14 @@ msgstr "Hilfekontext %s nicht in der Datenbank %s%s%s gefunden."
 #: objinspstrconsts:oishelphelpcontextnotfound
 msgid "Help context %s not found."
 msgstr "Hilfekontext %s nicht gefunden."
+
+#: objinspstrconsts:oishelphelpdatabasedidnotfoundaviewerforahelppageoftype
+msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
+msgstr "Hilfedatenbank %s%s%s konnte keinen Betrachter für die Hilfeseite des Typs %s finden"
+
+#: objinspstrconsts:oishelphelpdatabasenotfound
+msgid "Help Database %s%s%s not found"
+msgstr "Hilfedatenbank %s%s%s nicht gefunden"
 
 #: objinspstrconsts:oishelphelpkeywordnotfoundindatabase
 msgid "Help keyword %s%s%s not found in Database %s%s%s."
@@ -533,6 +541,10 @@ msgstr "Bild-Laden Dialog"
 msgid "Load picture"
 msgstr "Bild laden"
 
+#: objinspstrconsts:sccssgedtload
+msgid "Load..."
+msgstr ""
+
 #: objinspstrconsts:oismasks
 msgid "Masks..."
 msgstr ""
@@ -549,10 +561,6 @@ msgstr "Eintrag ändern"
 msgid "Move Down"
 msgstr "Nach unten bewegen"
 
-#: objinspstrconsts:sccsiledtmoveup
-msgid "Move Up"
-msgstr "Nach oben bewegen"
-
 #: objinspstrconsts:nbcesmovepageleft
 msgid "Move page left"
 msgstr "Seite nach links bewegen"
@@ -560,6 +568,10 @@ msgstr "Seite nach links bewegen"
 #: objinspstrconsts:nbcesmovepageright
 msgid "Move page right"
 msgstr "Seite nach rechts bewegen"
+
+#: objinspstrconsts:sccsiledtmoveup
+msgid "Move Up"
+msgstr "Nach oben bewegen"
 
 #: objinspstrconsts:cactionlisteditornewaction
 msgid "New Action"
@@ -581,13 +593,13 @@ msgstr ""
 msgid "Next"
 msgstr "Nächster"
 
-#: objinspstrconsts:oishelpnohtmlbrowserfoundpleasedefineoneinhelpconfigurehe
-msgid "No HTML Browser found.%sPlease define one in Help -> Configure Help -> Viewers"
-msgstr "Kein HTML-Browser gefunden%s Bitte definieren Sie einen in Hilfe->Hilfe konfigurieren->Betrachter"
-
 #: objinspstrconsts:oishelpnohelpfoundforsource
 msgid "No help found for line %d, column %d of %s."
 msgstr "Keine Hilfe für Zeile %d, Spalte %d von %s gefunden."
+
+#: objinspstrconsts:oishelpnohtmlbrowserfoundpleasedefineoneinhelpconfigurehe
+msgid "No HTML Browser found.%sPlease define one in Help -> Configure Help -> Viewers"
+msgstr "Kein HTML-Browser gefunden%s Bitte definieren Sie einen in Hilfe->Hilfe konfigurieren->Betrachter"
 
 #: objinspstrconsts:sccsiledtnone
 msgid "None"
@@ -705,13 +717,13 @@ msgstr "Fa&rbauswahl"
 msgid "Select &Font..."
 msgstr "&Schriftauswahl"
 
-#: objinspstrconsts:oistdacteditselectallshorthint
-msgid "Select All"
-msgstr "Alles markieren"
-
 #: objinspstrconsts:oisselectafile
 msgid "Select a file"
 msgstr "Datei auswählen"
+
+#: objinspstrconsts:oistdacteditselectallshorthint
+msgid "Select All"
+msgstr "Alles markieren"
 
 #: objinspstrconsts:sccsiledtgrprcaption
 msgid "Selected Image"
@@ -765,13 +777,13 @@ msgstr ""
 msgid "String"
 msgstr "Zeichenkette"
 
-#: objinspstrconsts:cesstringgrideditor2
+#: objinspstrconsts:sccssgedtgrp
+msgid "String Grid"
+msgstr ""
+
+#: objinspstrconsts:sccssgedtcaption
 msgid "StringGrid Editor"
 msgstr "StringGrid Editor"
-
-#: objinspstrconsts:cesstringgrideditor
-msgid "StringGrid Editor ..."
-msgstr "Stringgrid-Editor"
 
 #: objinspstrconsts:oisstringseditordialog
 msgid "Strings Editor Dialog"
