--- a/languages/objinspstrconsts.it.po
+++ b/languages/objinspstrconsts.it.po
@@ -112,13 +112,13 @@ msgstr ""
 msgid "(All)"
 msgstr "(tutto)"
 
-#: objinspstrconsts:cactionlisteditorunknowncategory
-msgid "(Unknown)"
-msgstr "(sconosciuto)"
-
 #: objinspstrconsts:oisnone
 msgid "(none)"
 msgstr ""
+
+#: objinspstrconsts:cactionlisteditorunknowncategory
+msgid "(Unknown)"
+msgstr "(sconosciuto)"
 
 #: objinspstrconsts:ois0lines0chars
 msgid "0 lines, 0 chars"
@@ -235,6 +235,10 @@ msgstr ""
 #: objinspstrconsts:oisclass
 msgid "Class"
 msgstr "Classe"
+
+#: objinspstrconsts:sccssgedtclean
+msgid "Clean"
+msgstr ""
 
 #: objinspstrconsts:sccsiledtclear
 msgid "Clear"
@@ -356,17 +360,21 @@ msgstr "&Uscita"
 msgid "Edit"
 msgstr "Modifica"
 
+#: objinspstrconsts:oiseditactionlist
+msgid "Edit action list..."
+msgstr "Modifica elenco azioni..."
+
 #: objinspstrconsts:sccslvedt
 msgid "Edit ListView Items..."
+msgstr ""
+
+#: objinspstrconsts:sccssgedt
+msgid "Edit StringGrid..."
 msgstr ""
 
 #: objinspstrconsts:sccstredt
 msgid "Edit TreeView Items..."
 msgstr ""
-
-#: objinspstrconsts:oiseditactionlist
-msgid "Edit action list..."
-msgstr "Modifica elenco azioni..."
 
 #: objinspstrconsts:oicoleditediting
 msgid "Editing"
@@ -428,14 +436,6 @@ msgstr "Aiuto"
 msgid "Help Contents"
 msgstr "Contenuti dell'aiuto"
 
-#: objinspstrconsts:oishelphelpdatabasedidnotfoundaviewerforahelppageoftype
-msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
-msgstr "Il database dell'aiuto %s%s%s non ha trovato un visualizzatore per una pagina di tipo %s"
-
-#: objinspstrconsts:oishelphelpdatabasenotfound
-msgid "Help Database %s%s%s not found"
-msgstr "Il database dell'aiuto %s%s%s non è stato trovato"
-
 #: objinspstrconsts:oishelphelpcontextnotfoundindatabase
 msgid "Help context %s not found in Database %s%s%s."
 msgstr "Il contesto dell'aiuto %s non è stato trovato nel database %s%s%s."
@@ -443,6 +443,14 @@ msgstr "Il contesto dell'aiuto %s non è stato trovato nel database %s%s%s."
 #: objinspstrconsts:oishelphelpcontextnotfound
 msgid "Help context %s not found."
 msgstr "Il contesto dell'aiuto %s non è stato trovato."
+
+#: objinspstrconsts:oishelphelpdatabasedidnotfoundaviewerforahelppageoftype
+msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
+msgstr "Il database dell'aiuto %s%s%s non ha trovato un visualizzatore per una pagina di tipo %s"
+
+#: objinspstrconsts:oishelphelpdatabasenotfound
+msgid "Help Database %s%s%s not found"
+msgstr "Il database dell'aiuto %s%s%s non è stato trovato"
 
 #: objinspstrconsts:oishelphelpkeywordnotfoundindatabase
 msgid "Help keyword %s%s%s not found in Database %s%s%s."
@@ -532,6 +540,10 @@ msgstr "Carica finestra di dialogo immagine"
 msgid "Load picture"
 msgstr ""
 
+#: objinspstrconsts:sccssgedtload
+msgid "Load..."
+msgstr ""
+
 #: objinspstrconsts:oismasks
 msgid "Masks..."
 msgstr ""
@@ -548,10 +560,6 @@ msgstr ""
 msgid "Move Down"
 msgstr "Sposta in basso"
 
-#: objinspstrconsts:sccsiledtmoveup
-msgid "Move Up"
-msgstr "Sposta in alto"
-
 #: objinspstrconsts:nbcesmovepageleft
 msgid "Move page left"
 msgstr ""
@@ -559,6 +567,10 @@ msgstr ""
 #: objinspstrconsts:nbcesmovepageright
 msgid "Move page right"
 msgstr ""
+
+#: objinspstrconsts:sccsiledtmoveup
+msgid "Move Up"
+msgstr "Sposta in alto"
 
 #: objinspstrconsts:cactionlisteditornewaction
 msgid "New Action"
@@ -580,13 +592,13 @@ msgstr ""
 msgid "Next"
 msgstr "Successiva"
 
-#: objinspstrconsts:oishelpnohtmlbrowserfoundpleasedefineoneinhelpconfigurehe
-msgid "No HTML Browser found.%sPlease define one in Help -> Configure Help -> Viewers"
-msgstr "Non è stato trovato nessun navigatore HTML.%sDefinirne uno in Aiuto -> Configurazione aiuto -> Visualizzatori"
-
 #: objinspstrconsts:oishelpnohelpfoundforsource
 msgid "No help found for line %d, column %d of %s."
 msgstr "Nessun aiuto provato per la riga %d, colonna %d di %s."
+
+#: objinspstrconsts:oishelpnohtmlbrowserfoundpleasedefineoneinhelpconfigurehe
+msgid "No HTML Browser found.%sPlease define one in Help -> Configure Help -> Viewers"
+msgstr "Non è stato trovato nessun navigatore HTML.%sDefinirne uno in Aiuto -> Configurazione aiuto -> Visualizzatori"
 
 #: objinspstrconsts:sccsiledtnone
 msgid "None"
@@ -704,13 +716,13 @@ msgstr "Seleziona &colore..."
 msgid "Select &Font..."
 msgstr "Seleziona &font..."
 
-#: objinspstrconsts:oistdacteditselectallshorthint
-msgid "Select All"
-msgstr "Seleziona tutto"
-
 #: objinspstrconsts:oisselectafile
 msgid "Select a file"
 msgstr "Seleziona un file"
+
+#: objinspstrconsts:oistdacteditselectallshorthint
+msgid "Select All"
+msgstr "Seleziona tutto"
 
 #: objinspstrconsts:sccsiledtgrprcaption
 msgid "Selected Image"
@@ -764,13 +776,13 @@ msgstr ""
 msgid "String"
 msgstr "Stringa"
 
-#: objinspstrconsts:cesstringgrideditor2
+#: objinspstrconsts:sccssgedtgrp
+msgid "String Grid"
+msgstr ""
+
+#: objinspstrconsts:sccssgedtcaption
 msgid "StringGrid Editor"
 msgstr "Editor StringGrid"
-
-#: objinspstrconsts:cesstringgrideditor
-msgid "StringGrid Editor ..."
-msgstr "Editor StringGrid..."
 
 #: objinspstrconsts:oisstringseditordialog
 msgid "Strings Editor Dialog"
