--- a/languages/objinspstrconsts.pb.po
+++ b/languages/objinspstrconsts.pb.po
@@ -102,13 +102,13 @@ msgstr "&Cima"
 msgid "(All)"
 msgstr "(Todos)"
 
-#: objinspstrconsts:cactionlisteditorunknowncategory
-msgid "(Unknown)"
-msgstr "(Desconhecido)"
-
 #: objinspstrconsts:oisnone
 msgid "(none)"
 msgstr ""
+
+#: objinspstrconsts:cactionlisteditorunknowncategory
+msgid "(Unknown)"
+msgstr "(Desconhecido)"
 
 #: objinspstrconsts:ois0lines0chars
 msgid "0 lines, 0 chars"
@@ -224,6 +224,10 @@ msgstr "Editor de lista de caixas de checagem"
 
 #: objinspstrconsts:oisclass
 msgid "Class"
+msgstr ""
+
+#: objinspstrconsts:sccssgedtclean
+msgid "Clean"
 msgstr ""
 
 #: objinspstrconsts:sccsiledtclear
@@ -346,17 +350,21 @@ msgstr "Sai&r"
 msgid "Edit"
 msgstr "Editar"
 
+#: objinspstrconsts:oiseditactionlist
+msgid "Edit action list..."
+msgstr "Editar lista de ações..."
+
 #: objinspstrconsts:sccslvedt
 msgid "Edit ListView Items..."
+msgstr ""
+
+#: objinspstrconsts:sccssgedt
+msgid "Edit StringGrid..."
 msgstr ""
 
 #: objinspstrconsts:sccstredt
 msgid "Edit TreeView Items..."
 msgstr ""
-
-#: objinspstrconsts:oiseditactionlist
-msgid "Edit action list..."
-msgstr "Editar lista de ações..."
 
 #: objinspstrconsts:oicoleditediting
 msgid "Editing"
@@ -418,14 +426,6 @@ msgstr "Ajuda"
 msgid "Help Contents"
 msgstr "Conteúdo da ajuda"
 
-#: objinspstrconsts:oishelphelpdatabasedidnotfoundaviewerforahelppageoftype
-msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
-msgstr "A base de dados de ajuda %s%s%s não encontrou uma página de ajuda para o"
-
-#: objinspstrconsts:oishelphelpdatabasenotfound
-msgid "Help Database %s%s%s not found"
-msgstr "Base de données d'aide %s%s%s non trouvée"
-
 #: objinspstrconsts:oishelphelpcontextnotfoundindatabase
 msgid "Help context %s not found in Database %s%s%s."
 msgstr "Contexte d'aide %s non trouvé dans la base de données %s%s%s."
@@ -433,6 +433,14 @@ msgstr "Contexte d'aide %s non trouvé dans la base de données %s%s%s."
 #: objinspstrconsts:oishelphelpcontextnotfound
 msgid "Help context %s not found."
 msgstr "Conteúdo da ajuda %s não encontrado."
+
+#: objinspstrconsts:oishelphelpdatabasedidnotfoundaviewerforahelppageoftype
+msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
+msgstr "A base de dados de ajuda %s%s%s não encontrou uma página de ajuda para o"
+
+#: objinspstrconsts:oishelphelpdatabasenotfound
+msgid "Help Database %s%s%s not found"
+msgstr "Base de données d'aide %s%s%s non trouvée"
 
 #: objinspstrconsts:oishelphelpkeywordnotfoundindatabase
 msgid "Help keyword %s%s%s not found in Database %s%s%s."
@@ -522,6 +530,10 @@ msgstr "Dialoga de carregamento de imagem"
 msgid "Load picture"
 msgstr "Carregar figura"
 
+#: objinspstrconsts:sccssgedtload
+msgid "Load..."
+msgstr ""
+
 #: objinspstrconsts:oismasks
 msgid "Masks..."
 msgstr ""
@@ -538,10 +550,6 @@ msgstr "Modificar o item"
 msgid "Move Down"
 msgstr "Mover abaixo"
 
-#: objinspstrconsts:sccsiledtmoveup
-msgid "Move Up"
-msgstr "Mover acima"
-
 #: objinspstrconsts:nbcesmovepageleft
 msgid "Move page left"
 msgstr "Mover página a esquerda"
@@ -549,6 +557,10 @@ msgstr "Mover página a esquerda"
 #: objinspstrconsts:nbcesmovepageright
 msgid "Move page right"
 msgstr "Mover página a direita"
+
+#: objinspstrconsts:sccsiledtmoveup
+msgid "Move Up"
+msgstr "Mover acima"
 
 #: objinspstrconsts:cactionlisteditornewaction
 msgid "New Action"
@@ -570,13 +582,13 @@ msgstr ""
 msgid "Next"
 msgstr "Próximo"
 
-#: objinspstrconsts:oishelpnohtmlbrowserfoundpleasedefineoneinhelpconfigurehe
-msgid "No HTML Browser found.%sPlease define one in Help -> Configure Help -> Viewers"
-msgstr "Não foi encontrado um navegador HTM padrão.%sPor Favor configure um no menu Ajuda ->"
-
 #: objinspstrconsts:oishelpnohelpfoundforsource
 msgid "No help found for line %d, column %d of %s."
 msgstr "Não foi encontrado ajuda para a linha %d, coluna %d do %s."
+
+#: objinspstrconsts:oishelpnohtmlbrowserfoundpleasedefineoneinhelpconfigurehe
+msgid "No HTML Browser found.%sPlease define one in Help -> Configure Help -> Viewers"
+msgstr "Não foi encontrado um navegador HTM padrão.%sPor Favor configure um no menu Ajuda ->"
 
 #: objinspstrconsts:sccsiledtnone
 msgid "None"
@@ -694,13 +706,13 @@ msgstr "Selecionar &Cor"
 msgid "Select &Font..."
 msgstr "Selecionar &Fonte"
 
-#: objinspstrconsts:oistdacteditselectallshorthint
-msgid "Select All"
-msgstr "Selecionar Todos"
-
 #: objinspstrconsts:oisselectafile
 msgid "Select a file"
 msgstr "Selecione um arquivo"
+
+#: objinspstrconsts:oistdacteditselectallshorthint
+msgid "Select All"
+msgstr "Selecionar Todos"
 
 #: objinspstrconsts:sccsiledtgrprcaption
 msgid "Selected Image"
@@ -754,13 +766,13 @@ msgstr ""
 msgid "String"
 msgstr "Chaîne"
 
-#: objinspstrconsts:cesstringgrideditor2
+#: objinspstrconsts:sccssgedtgrp
+msgid "String Grid"
+msgstr ""
+
+#: objinspstrconsts:sccssgedtcaption
 msgid "StringGrid Editor"
 msgstr "Editeur de tableau"
-
-#: objinspstrconsts:cesstringgrideditor
-msgid "StringGrid Editor ..."
-msgstr "Editor de grades de texto..."
 
 #: objinspstrconsts:oisstringseditordialog
 msgid "Strings Editor Dialog"
