--- a/languages/lazaruside.nl.po
+++ b/languages/lazaruside.nl.po
@@ -4055,8 +4055,8 @@ msgid "library path"
 msgstr "Bibliotheek pad"
 
 #: lazarusidestrconsts:lislibraryafreepascallibrarydllunderwindowssounderlin
-msgid "Library%sA freepascal library (.dll under windows, .so under linux, .so under macosx). The library source file is automatically maintained by Lazarus."
-msgstr "Library%sEen freepascal bibliotheek (.dll in windows, .so in linux, .so in MaxOSX). De bibliotheek broncode bestand wordt door Lazarus onderhouden."
+msgid "Library%sA freepascal library (.dll under windows, .so under linux, .dylib under macosx). The library source file is automatically maintained by Lazarus."
+msgstr ""
 
 #: lazarusidestrconsts:lispckoptslicense
 msgid "License:"
