--- a/languages/lazaruside.de.po
+++ b/languages/lazaruside.de.po
@@ -4069,7 +4069,7 @@ msgid "library path"
 msgstr "Bibliothekspfad"
 
 #: lazarusidestrconsts:lislibraryafreepascallibrarydllunderwindowssounderlin
-msgid "Library%sA freepascal library (.dll under windows, .so under linux, .so under macosx). The library source file is automatically maintained by Lazarus."
+msgid "Library%sA freepascal library (.dll under windows, .so under linux, .dylib under macosx). The library source file is automatically maintained by Lazarus."
 msgstr ""
 
 #: lazarusidestrconsts:lispckoptslicense
