--- a/languages/lazaruside.po
+++ b/languages/lazaruside.po
@@ -8643,7 +8643,7 @@ msgid "Custom Program%sA freepascal program."
 msgstr ""
 
 #: lazarusidestrconsts:lislibraryafreepascallibrarydllunderwindowssounderlin
-msgid "Library%sA freepascal library (.dll under windows, .so under linux, .so under macosx). The library source file is automatically maintained by Lazarus."
+msgid "Library%sA freepascal library (.dll under windows, .so under linux, .dylib under macosx). The library source file is automatically maintained by Lazarus."
 msgstr ""
 
 #: lazarusidestrconsts:lisnpselectaprojecttype
