--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -4066,7 +4066,7 @@ msgid "library path"
 msgstr "путь к библиотекам"
 
 #: lazarusidestrconsts:lislibraryafreepascallibrarydllunderwindowssounderlin
-msgid "Library%sA freepascal library (.dll under windows, .so under linux, .so under macosx). The library source file is automatically maintained by Lazarus."
+msgid "Library%sA freepascal library (.dll under windows, .so under linux, .dylib under macosx). The library source file is automatically maintained by Lazarus."
 msgstr ""
 
 #: lazarusidestrconsts:lispckoptslicense
