--- a/languages/objinspstrconsts.it.po
+++ b/languages/objinspstrconsts.it.po
@@ -1,16 +1,18 @@
+# translation of objinspstrconsts.po to Italian Marco Ciampa <ciampix@libero.it>, 2005. Dean Zobec <dezobec@tin.it>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: 0.0\n"
-"PO-Revision-Date: 2005-06-01 21:59+0200\n"
-"Last-Translator: Marco Ciampa <ciampix@libero.it>\n"
-"Language-Team: italiano <tp@lists.linux.it>\n"
+"Project-Id-Version: objinspstrconsts\n"
+"PO-Revision-Date: 2006-02-25 22:12+0100\n"
+"Last-Translator: Dean Zobec <dezobec@tin.it>\n"
+"Language-Team: Italian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.10.2\n"
 
 #: objinspstrconsts:oisdlinesdchars
 msgid "%d lines, %d chars"
-msgstr ""
+msgstr "%d righe, %d caratteri"
 
 #: objinspstrconsts:oishelpalreadyregistered
 msgid "%s: Already registered"
@@ -106,27 +108,27 @@ msgstr "&Annulla"
 
 #: objinspstrconsts:clbup
 msgid "&Up"
-msgstr ""
+msgstr "Su"
 
 #: objinspstrconsts:cactionlisteditorallcategory
 msgid "(All)"
 msgstr "(tutto)"
 
+#: objinspstrconsts:oisnone
+msgid "(none)"
+msgstr "(nessuno)"
+
 #: objinspstrconsts:cactionlisteditorunknowncategory
 msgid "(Unknown)"
 msgstr "(sconosciuto)"
 
-#: objinspstrconsts:oisnone
-msgid "(none)"
-msgstr ""
-
 #: objinspstrconsts:ois0lines0chars
 msgid "0 lines, 0 chars"
-msgstr ""
+msgstr "0 righe, 0 caratteri"
 
 #: objinspstrconsts:ois1linedchars
 msgid "1 line, %d chars"
-msgstr ""
+msgstr "1 riga, %d caratteri"
 
 #: objinspstrconsts:oisaction
 msgid "Action"
@@ -138,31 +140,31 @@ msgstr "Editor elenco azioni"
 
 #: objinspstrconsts:oicoleditadd
 msgid "Add"
-msgstr ""
+msgstr "Aggiungi"
 
 #: objinspstrconsts:sccsiledtopendialog
 msgid "Add Images"
-msgstr ""
+msgstr "Aggiungi Immagini"
 
 #: objinspstrconsts:clbadd
 msgid "Add new Item"
-msgstr ""
+msgstr "Aggiungi nuovo elemento"
 
 #: objinspstrconsts:nbcesaddpage
 msgid "Add page"
-msgstr ""
+msgstr "Aggiungi pagina"
 
 #: objinspstrconsts:oisaddtofavorites
 msgid "Add to Favorites"
-msgstr ""
+msgstr "Aggiungi ai Preferiti"
 
 #: objinspstrconsts:sccsiledtadd
 msgid "Add..."
-msgstr ""
+msgstr "Aggiungi..."
 
 #: objinspstrconsts:sccsiledtadjustment
 msgid "Adjustment"
-msgstr ""
+msgstr "Aggiustamento"
 
 #: objinspstrconsts:oisall
 msgid "All"
@@ -170,11 +172,11 @@ msgstr "Tutto"
 
 #: objinspstrconsts:oisallfiles
 msgid "All files"
-msgstr ""
+msgstr "Tutti i file"
 
 #: objinspstrconsts:sccstredtapply
 msgid "Apply"
-msgstr ""
+msgstr "Applica"
 
 #: objinspstrconsts:oisarray
 msgid "Array"
@@ -206,7 +208,7 @@ msgstr "Annulla"
 
 #: objinspstrconsts:sccslvedtlabelcaption
 msgid "Caption:"
-msgstr ""
+msgstr "Titolo: "
 
 #: objinspstrconsts:oiscategory
 msgid "Category"
@@ -214,7 +216,7 @@ msgstr "Categoria"
 
 #: objinspstrconsts:sccsiledtcenter
 msgid "Center"
-msgstr ""
+msgstr "Centra"
 
 #: objinspstrconsts:oischar
 msgid "Char"
@@ -222,15 +224,15 @@ msgstr "Carattere"
 
 #: objinspstrconsts:oischaractersforblanks
 msgid "Characters for Blanks"
-msgstr ""
+msgstr "Caratteri per Blanks"
 
 #: objinspstrconsts:clbcheckgroupeditor
 msgid "CheckGroup Editor"
-msgstr ""
+msgstr "Editor per il CheckGroup"
 
 #: objinspstrconsts:clbchecklistboxeditor
 msgid "CheckListBox Editor"
-msgstr ""
+msgstr "Editor del CheckListBox"
 
 #: objinspstrconsts:oisclass
 msgid "Class"
@@ -238,7 +240,7 @@ msgstr "Classe"
 
 #: objinspstrconsts:sccssgedtclean
 msgid "Clean"
-msgstr ""
+msgstr "Pulisci"
 
 #: objinspstrconsts:sccsiledtclear
 msgid "Clear"
@@ -246,7 +248,7 @@ msgstr "Cancella"
 
 #: objinspstrconsts:oisclearpicture
 msgid "Clear picture"
-msgstr ""
+msgstr "Pulisci immagine"
 
 #: objinspstrconsts:oistdactcolorselecthint
 msgid "Color Select"
@@ -254,11 +256,11 @@ msgstr "Seleziona colore"
 
 #: objinspstrconsts:oiscomponentnameisnotavalididentifier
 msgid "Component name %s%s%s is not a valid identifier"
-msgstr ""
+msgstr "Il nome del componente %s%s%s non è un identificatore valido"
 
 #: objinspstrconsts:oiscomponents
 msgid "Components"
-msgstr ""
+msgstr "Componenti"
 
 #: objinspstrconsts:oisconfirmdelete
 msgid "Confirm delete"
@@ -270,7 +272,7 @@ msgstr "Copia"
 
 #: objinspstrconsts:oiscreateanewpascalunit
 msgid "Create a new pascal unit."
-msgstr ""
+msgstr "Crea una nuova unit pascal"
 
 #: objinspstrconsts:oiscreatedefaultevent
 msgid "Create default event"
@@ -278,7 +280,7 @@ msgstr "Crea evento predefinito"
 
 #: objinspstrconsts:sccsiledtcrop
 msgid "Crop"
-msgstr ""
+msgstr "Taglia"
 
 #: objinspstrconsts:oistdacteditselectallshortcut
 msgid "Ctrl+A"
@@ -334,11 +336,11 @@ msgstr "Cancellare la voce %s%s%s?"
 
 #: objinspstrconsts:nbcesdeletepage
 msgid "Delete page"
-msgstr ""
+msgstr "Cancella pagina"
 
 #: objinspstrconsts:clbdelete
 msgid "Delete the Item %d \"%s\"?"
-msgstr ""
+msgstr "Cancella la voce %d \"%s\"?"
 
 #: objinspstrconsts:cactionlisteditordialogcategory
 msgid "Dialog"
@@ -346,11 +348,11 @@ msgstr "Finestra di dialogo"
 
 #: objinspstrconsts:clbdown
 msgid "Do&wn"
-msgstr ""
+msgstr "&Giù"
 
 #: objinspstrconsts:oicoleditdown
 msgid "Down"
-msgstr ""
+msgstr "Giù"
 
 #: objinspstrconsts:oistdactfileexitheadline
 msgid "E&xit"
@@ -360,25 +362,25 @@ msgstr "&Uscita"
 msgid "Edit"
 msgstr "Modifica"
 
-#: objinspstrconsts:sccslvedt
-msgid "Edit ListView Items..."
-msgstr ""
-
-#: objinspstrconsts:sccssgedt
-msgid "Edit StringGrid..."
-msgstr ""
-
-#: objinspstrconsts:sccstredt
-msgid "Edit TreeView Items..."
-msgstr ""
-
 #: objinspstrconsts:oiseditactionlist
 msgid "Edit action list..."
 msgstr "Modifica elenco azioni..."
 
+#: objinspstrconsts:sccslvedt
+msgid "Edit ListView Items..."
+msgstr "Modifica le voci della ListView"
+
+#: objinspstrconsts:sccssgedt
+msgid "Edit StringGrid..."
+msgstr "Modifica la StringGrid"
+
+#: objinspstrconsts:sccstredt
+msgid "Edit TreeView Items..."
+msgstr "Modifica gli elementi del TreeView"
+
 #: objinspstrconsts:oicoleditediting
 msgid "Editing"
-msgstr ""
+msgstr "Modifica"
 
 #: objinspstrconsts:oisenumeration
 msgid "Enumeration"
@@ -410,7 +412,7 @@ msgstr "Uscita"
 
 #: objinspstrconsts:oisfavorites
 msgid "Favorites"
-msgstr ""
+msgstr "Favoriti"
 
 #: objinspstrconsts:cactionlisteditorfilecategory
 msgid "File"
@@ -436,14 +438,6 @@ msgstr "Aiuto"
 msgid "Help Contents"
 msgstr "Contenuti dell'aiuto"
 
-#: objinspstrconsts:oishelphelpdatabasedidnotfoundaviewerforahelppageoftype
-msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
-msgstr "Il database dell'aiuto %s%s%s non ha trovato un visualizzatore per una pagina di tipo %s"
-
-#: objinspstrconsts:oishelphelpdatabasenotfound
-msgid "Help Database %s%s%s not found"
-msgstr "Il database dell'aiuto %s%s%s non è stato trovato"
-
 #: objinspstrconsts:oishelphelpcontextnotfoundindatabase
 msgid "Help context %s not found in Database %s%s%s."
 msgstr "Il contesto dell'aiuto %s non è stato trovato nel database %s%s%s."
@@ -451,6 +445,14 @@ msgstr "Il contesto dell'aiuto %s non è stato trovato nel database %s%s%s."
 #: objinspstrconsts:oishelphelpcontextnotfound
 msgid "Help context %s not found."
 msgstr "Il contesto dell'aiuto %s non è stato trovato."
+
+#: objinspstrconsts:oishelphelpdatabasedidnotfoundaviewerforahelppageoftype
+msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
+msgstr "Il database dell'aiuto %s%s%s non ha trovato un visualizzatore per una pagina di tipo %s"
+
+#: objinspstrconsts:oishelphelpdatabasenotfound
+msgid "Help Database %s%s%s not found"
+msgstr "Il database dell'aiuto %s%s%s non è stato trovato"
 
 #: objinspstrconsts:oishelphelpkeywordnotfoundindatabase
 msgid "Help keyword %s%s%s not found in Database %s%s%s."
@@ -470,19 +472,19 @@ msgstr "Aiuto sull'aiuto"
 
 #: objinspstrconsts:sccstredtlabelimageindex
 msgid "Image Index:"
-msgstr ""
+msgstr "Image Index:"
 
 #: objinspstrconsts:sccsiledtcaption
 msgid "ImageList Editor"
-msgstr ""
+msgstr "Editor ImageList"
 
 #: objinspstrconsts:sccsiledtgrplcaption
 msgid "Images"
-msgstr ""
+msgstr "Immagini"
 
 #: objinspstrconsts:oisinputmask
 msgid "Input Mask:"
-msgstr ""
+msgstr "Maschera di input:"
 
 #: objinspstrconsts:oistdactdatasetinserthint
 msgid "Insert"
@@ -490,7 +492,7 @@ msgstr "Inserimento"
 
 #: objinspstrconsts:nbcesinsertpage
 msgid "Insert page"
-msgstr ""
+msgstr "Inserisci pagina"
 
 #: objinspstrconsts:oisint64
 msgid "Int64"
@@ -506,19 +508,19 @@ msgstr "Interfaccia"
 
 #: objinspstrconsts:oisinvalidpropertyvalue
 msgid "Invalid property value"
-msgstr ""
+msgstr "Valore proprietà non valido"
 
 #: objinspstrconsts:sccstredtitem
 msgid "Item"
-msgstr ""
+msgstr "Voce"
 
 #: objinspstrconsts:sccstredtgrprcaption
 msgid "Item Properties"
-msgstr ""
+msgstr "Proprietà delle voci"
 
 #: objinspstrconsts:sccstredtgrplcaption
 msgid "Items"
-msgstr ""
+msgstr "Voci"
 
 #: objinspstrconsts:oistdactdatasetlasthint
 msgid "Last"
@@ -526,11 +528,11 @@ msgstr "Ultimo"
 
 #: objinspstrconsts:sccslvedtcaption
 msgid "ListView Items Editor"
-msgstr ""
+msgstr "Editor delle voci della ListView"
 
 #: objinspstrconsts:sccstredtload
 msgid "Load"
-msgstr ""
+msgstr "Carica"
 
 #: objinspstrconsts:oisloadimagedialog
 msgid "Load Image Dialog"
@@ -538,15 +540,15 @@ msgstr "Carica finestra di dialogo immagine"
 
 #: objinspstrconsts:oisloadpicture
 msgid "Load picture"
-msgstr ""
+msgstr "Carica Immagine"
 
 #: objinspstrconsts:sccssgedtload
 msgid "Load..."
-msgstr ""
+msgstr "Carica..."
 
 #: objinspstrconsts:oismasks
 msgid "Masks..."
-msgstr ""
+msgstr "Maschere..."
 
 #: objinspstrconsts:oismethod
 msgid "Method"
@@ -554,23 +556,23 @@ msgstr "Metodo"
 
 #: objinspstrconsts:clbmodify
 msgid "Modify the Item"
-msgstr ""
+msgstr "Modifica la voce"
 
 #: objinspstrconsts:sccsiledtmovedown
 msgid "Move Down"
 msgstr "Sposta in basso"
 
-#: objinspstrconsts:sccsiledtmoveup
-msgid "Move Up"
-msgstr "Sposta in alto"
-
 #: objinspstrconsts:nbcesmovepageleft
 msgid "Move page left"
-msgstr ""
+msgstr "Sposta la pagina a sinistra"
 
 #: objinspstrconsts:nbcesmovepageright
 msgid "Move page right"
-msgstr ""
+msgstr "Sposta la pagina a destra"
+
+#: objinspstrconsts:sccsiledtmoveup
+msgid "Move Up"
+msgstr "Sposta in alto"
 
 #: objinspstrconsts:cactionlisteditornewaction
 msgid "New Action"
@@ -578,7 +580,7 @@ msgstr "Nuova azione"
 
 #: objinspstrconsts:sccstredtnewitem
 msgid "New Item"
-msgstr ""
+msgstr "Nuova Voce"
 
 #: objinspstrconsts:cactionlisteditornewstdaction
 msgid "New Standard Action"
@@ -586,23 +588,23 @@ msgstr "Nuova azione standard"
 
 #: objinspstrconsts:sccstredtnewsubitem
 msgid "New SubItem"
-msgstr ""
+msgstr "Nuova Sottovoce"
 
 #: objinspstrconsts:oistdactdatasetnexthint
 msgid "Next"
 msgstr "Successiva"
 
-#: objinspstrconsts:oishelpnohtmlbrowserfoundpleasedefineoneinhelpconfigurehe
-msgid "No HTML Browser found.%sPlease define one in Help -> Configure Help -> Viewers"
-msgstr "Non è stato trovato nessun navigatore HTML.%sDefinirne uno in Aiuto -> Configurazione aiuto -> Visualizzatori"
-
 #: objinspstrconsts:oishelpnohelpfoundforsource
 msgid "No help found for line %d, column %d of %s."
 msgstr "Nessun aiuto provato per la riga %d, colonna %d di %s."
 
+#: objinspstrconsts:oishelpnohtmlbrowserfoundpleasedefineoneinhelpconfigurehe
+msgid "No HTML Browser found.%sPlease define one in Help -> Configure Help -> Viewers"
+msgstr "Non è stato trovato nessun navigatore HTML.%sDefinirne uno in Aiuto -> Configurazione aiuto -> Visualizzatori"
+
 #: objinspstrconsts:sccsiledtnone
 msgid "None"
-msgstr ""
+msgstr "Nessuno"
 
 #: objinspstrconsts:oisobject
 msgid "Object"
@@ -614,7 +616,7 @@ msgstr "Ispettore oggetti"
 
 #: objinspstrconsts:oisok2
 msgid "Ok"
-msgstr ""
+msgstr "Ok"
 
 #: objinspstrconsts:sccstredtopendialog
 msgid "Open"
@@ -622,11 +624,11 @@ msgstr "Apri"
 
 #: objinspstrconsts:oisopenmaskfile
 msgid "Open masks file (*.dem)"
-msgstr ""
+msgstr "Apri il file delle maschere (*.dem)"
 
 #: objinspstrconsts:oisoptions
 msgid "Options"
-msgstr ""
+msgstr "Opzioni"
 
 #: objinspstrconsts:oistdactdatasetpostheadline
 msgid "P&ost"
@@ -642,7 +644,7 @@ msgstr "Incolla"
 
 #: objinspstrconsts:clbdisable
 msgid "Popup to disable/enable items"
-msgstr ""
+msgstr "Popup per abilitare/disabilitare le voci"
 
 #: objinspstrconsts:oistdactdatasetposthint
 msgid "Post"
@@ -658,7 +660,7 @@ msgstr "Proprietà"
 
 #: objinspstrconsts:oispropertiesof
 msgid "Properties of %s"
-msgstr ""
+msgstr "Proprietà di %s"
 
 #: objinspstrconsts:oisrecord
 msgid "Record"
@@ -670,15 +672,15 @@ msgstr "Aggiorna"
 
 #: objinspstrconsts:oisremovefromfavorites
 msgid "Remove from Favorites"
-msgstr ""
+msgstr "Rimuovi dai Preferiti"
 
 #: objinspstrconsts:oissamplemasks
 msgid "Sample Masks:"
-msgstr ""
+msgstr "Esempi di Maschere:"
 
 #: objinspstrconsts:sccstredtsave
 msgid "Save"
-msgstr ""
+msgstr "Salva"
 
 #: objinspstrconsts:oistdactfilesaveasheadline
 msgid "Save &As..."
@@ -690,19 +692,19 @@ msgstr "Salva come"
 
 #: objinspstrconsts:sccsiledtsavedialog
 msgid "Save Image"
-msgstr ""
+msgstr "Salva Immagine"
 
 #: objinspstrconsts:oissaveliteralcharacters
 msgid "Save Literal Characters"
-msgstr ""
+msgstr "Salva Caratteri Letterali"
 
 #: objinspstrconsts:oissavepicture
 msgid "Save picture"
-msgstr ""
+msgstr "Salva foto"
 
 #: objinspstrconsts:sccsiledtsave
 msgid "Save..."
-msgstr ""
+msgstr "Salva..."
 
 #: objinspstrconsts:oistdacteditselectallheadline
 msgid "Select &All"
@@ -716,21 +718,21 @@ msgstr "Seleziona &colore..."
 msgid "Select &Font..."
 msgstr "Seleziona &font..."
 
-#: objinspstrconsts:oistdacteditselectallshorthint
-msgid "Select All"
-msgstr "Seleziona tutto"
-
 #: objinspstrconsts:oisselectafile
 msgid "Select a file"
 msgstr "Seleziona un file"
 
+#: objinspstrconsts:oistdacteditselectallshorthint
+msgid "Select All"
+msgstr "Seleziona tutto"
+
 #: objinspstrconsts:sccsiledtgrprcaption
 msgid "Selected Image"
-msgstr ""
+msgstr "Immagine Selezionata"
 
 #: objinspstrconsts:sccstredtlabelselindex
 msgid "Selected Index:"
-msgstr ""
+msgstr "Indice selezionato:"
 
 #: objinspstrconsts:oisset
 msgid "Set"
@@ -746,15 +748,15 @@ msgstr "Imposta al valore predefinito: %s"
 
 #: objinspstrconsts:oisshowcomponenttree
 msgid "Show Component Tree"
-msgstr ""
+msgstr "Mostra l'albero dei componenti"
 
 #: objinspstrconsts:oisshowhints
 msgid "Show Hints"
-msgstr ""
+msgstr "Mostra suggerimenti"
 
 #: objinspstrconsts:nbcesshowpage
 msgid "Show page ..."
-msgstr ""
+msgstr "Mostra pagina ..."
 
 #: objinspstrconsts:oissort
 msgid "Sort"
@@ -766,11 +768,11 @@ msgstr "Classi di azioni standard"
 
 #: objinspstrconsts:sccstredtlabelstateindex
 msgid "State Index:"
-msgstr ""
+msgstr "Indice di Stato"
 
 #: objinspstrconsts:sccsiledtstretch
 msgid "Stretch"
-msgstr ""
+msgstr "Allarga"
 
 #: objinspstrconsts:oisstring
 msgid "String"
@@ -778,7 +780,7 @@ msgstr "Stringa"
 
 #: objinspstrconsts:sccssgedtgrp
 msgid "String Grid"
-msgstr ""
+msgstr "String Grid"
 
 #: objinspstrconsts:sccssgedtcaption
 msgid "StringGrid Editor"
@@ -788,17 +790,17 @@ msgstr "Editor StringGrid"
 msgid "Strings Editor Dialog"
 msgstr "Finestra di dialogo editor delle stringhe"
 
-#: objinspstrconsts:oistestinput
-msgid "Test Input"
-msgstr ""
-
 #: objinspstrconsts:oistestdialog
 msgid "Test dialog..."
-msgstr ""
+msgstr "Prova finestra di dialogo..."
+
+#: objinspstrconsts:oistestinput
+msgid "Test Input"
+msgstr "Prova Input"
 
 #: objinspstrconsts:sccstredtlabeltext
 msgid "Text:"
-msgstr ""
+msgstr "Testo:"
 
 #: objinspstrconsts:oishelpthehelpdatabasewasunabletofindfile
 msgid "The help database %s%s%s was unable to find file %s%s%s."
@@ -818,11 +820,11 @@ msgstr "Ricerca argomento"
 
 #: objinspstrconsts:sccsiledtransparentcolor
 msgid "Transparent Color:"
-msgstr ""
+msgstr "Colore di Trasparenza:"
 
 #: objinspstrconsts:sccstredtcaption
 msgid "TreeView Items Editor"
-msgstr ""
+msgstr "Editor voci della Treeview"
 
 #: objinspstrconsts:oisundo
 msgid "Undo"
@@ -834,7 +836,7 @@ msgstr "Sconosciuto"
 
 #: objinspstrconsts:oicoleditup
 msgid "Up"
-msgstr ""
+msgstr "Su"
 
 #: objinspstrconsts:oisvalue
 msgid "Value:"
